feat: scale and cache improvements, React Query, paged timeline/photos
Backend: optional tarantula list pagination and batch enrichment; discover aggregation caching (Redis/Caffeine), rate limiting, Serializable DTOs; paged timeline and photos (including public); TarantulaTimelineJdbcRepository and PagedListResponse.

Frontend: TanStack Query for collection list with invalidation on login/logout and detail mutations; paged timeline and photo gallery; public profile paging; migrate dashboard, reminders, discover, social, QR tools, account, and add-spider flows.

Chore: ignore frontend/android/app/release/; clarify versionCode defaults vs android-aab.yml (VERSION_CODE); Android versionName 2.0.3.
Co-authored-by: Cursor <cursoragent@cursor.com>